# hfem

./: LICENSE  README.md  TODO  hfem.cabal  runTests.sh  stack.yaml
.stack-work/install/x86_64-linux-nopie/lts-9.5/8.0.2/flag-cache/: HUnit-1.5.0.0-DvjF79OHhCC7SzfeEty4OI  QuickCheck-2.9.2-LvlomhGMxrFBkX1zwiWpQu  ansi-terminal-0.6.3.1-3RTqikoQf47ajVD9m8zgB  ansi-wl-pprint-0.6.7.3-A79v826bgPr574HtaZPPqC  async-2.1.1.1-8yywY4inVGRLJSCg60gBXj  blaze-builder-0.4.0.2-LxClHUTiKUUAxWtvJ5Oeoy  blaze-markup-0.8.0.0-GsxkVbRgODkgUQDmmDVob  call-stack-0.1.0-FYVrCPXGP9EGAuTW32963O  clock-0.7.2-8dRNleB7rysIZAOReuhpZA  generic-deriving-1.11.2-FTRmVS5RM6G7R2MgyiZHgW  hfem-0.1.0.0  hspec-2.4.4-Ct0Af2AzisB8bPqGMHHFvj  hspec-core-2.4.4-Ezb0jq4rRfBJWZtpolvs1E  hspec-discover-2.4.4-99Suq6sFZ1T6o4isjc43TZ  hspec-expectations-0.8.2-DujBeQFEMmfJJRLad7XQgd  mtl-2.2.1-BLKBelFsPB3BoFeSWSOYj6  optparse-applicative-0.13.2.0-EqIYOWOFTvf23sT5QTYn9U  parsec-3.1.11-1aqiimsgq2dCv7eoaC8WuX  primitive-0.6.2.0-4578caNkWQ54Gt1mxLF2Yh  quickcheck-io-0.2.0-4pLO1WRxoBW9gt8EnME0zS  random-1.1-9tceXaeYIMZ4JrKq20Egog  regex-base-0.93.2-AYjYAsBidAc8f5XNm9b2Aa  regex-tdfa-1.2.2-CuFri6F1SLwFkkN6cPEwX5  setenv-0.1.1.3-8dEhk6JWvlmCmVyBammSpu  stm-2.4.4.1-JQn4hNPyYjP5m9AcbI88Ve  tagged-0.8.5-1mTloBSoUxv8dqUr8XBGBt  text-1.2.2.2-9UQZjEJZQFSGMffj1Z5g00  (+7 more)
refs/: IrcLog-recursion-inefficiency  dgfem.m
src/: Advection1D.hs  Basis.hs  DG1d.hs  Element.hs  Example.hs  Flux.hs  Main.hs  Mesh.hs  Node.hs  Ode.hs  Poisson1D.hs  Projection.hs  Quadrature.hs  ShapeFcns.hs  TODO  plotProjection.py
test/: basisTests.hs  hfemTests.hs
(+1 files in other folders)
